--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -9,6 +9,6 @@
   overflow-x: hidden;
   overflow-y: hidden;
   padding: 50px;
-  background-color: #0e0e0e;
+  background-color: #f2f2f2;
   transition: visibility 0.1s linear, opacity 0.1s linear;
 }
