--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #0e0e0e;
+  background-color: #f2f2f2;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -21,17 +21,17 @@ code {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #1d1d1d;
+  background: #f2f2f2;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #3a3a3a;
+  background: rgb(184, 184, 184);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #535353;
+  background: rgb(184, 184, 184);
 }
 
 ::-webkit-scrollbar-corner {
